# nimcp

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  .mcp.json  API_REFERENCE.md  ARCHITECTURE_DIAGRAM.txt  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  ARTEMIS_INTEGRATION.md  ATTENTION_TESTS_FIXED.md  ATTENTION_TEST_RESULTS.md  AUDIO_IMMUNE_INTEGRATION_SUMMARY.md  AUDIO_IMMUNE_QUICK_REFERENCE.md  AUDIT_FIXES_COMPLETE.md  BRAIN_DECOMPOSITION_PLAN.md  BUILD_NORMALIZATION_IMMUNE.md  BUILD_SYSTEM_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CNN_TRAINING_DESIGN.md  CODE_QUALITY_EXAMPLES.md  CODE_QUALITY_SUMMARY.txt  CODE_SURGEON_IMPLEMENTATION.md  COGNITIVE_MODULES_INVENTORY.md  COGNITIVE_PIPELINE_IMPROVEMENTS.md  COMMUNITY_DETECTION_FILES.md  COMMUNITY_DETECTION_INDEX.md  COMMUNITY_DETECTION_INTEGRATION.md  COMPLETE_SESSION_SUMMARY.md  COMPLEX_NUMBER_INTEGRATION_STATUS.md  CONSOLIDATION_REAL_WEIGHTS_IMPLEMENTATION.md  CONTRIBUTING_V2.md  CORE_FEP_BRIDGES_IMPLEMENTATION.md  COVERAGE_MAP.md  COVERAGE_PLAN.md  COVERAGE_REPORT.md  COVERAGE_REPORT_2025-11-11.md  (+312 more)
benches/mlp/: Cargo.toml
benches/snn/: Cargo.toml
crates/brain/: Cargo.toml
crates/checkpoint/: Cargo.toml
crates/core/: Cargo.toml
crates/daemon/: Cargo.toml
crates/eventlog/: Cargo.toml
crates/fractal/: Cargo.toml
crates/geometry/: Cargo.toml
crates/gpu/: Cargo.toml  build.rs
crates/mathutils/: Cargo.toml
crates/memory/: Cargo.toml
crates/pinknoise/: Cargo.toml
crates/plasticity/: Cargo.toml
crates/quantum/: Cargo.toml
crates/scheduler/: Cargo.toml
crates/substrate/: Cargo.toml
crates/tensor/: Cargo.toml
crates/ternary/: Cargo.toml
crates/thalamic/: Cargo.toml
crates/v1-bridge/: Cargo.toml  build.rs
examples/: CMakeLists.txt  COW_EXAMPLES_README.md  COW_QUICK_START.md  Makefile  app.py  brain_cow_simple_example.py  brain_demo  brain_demo.c  brain_export_example.json  brain_probe_demo.c  centrality_demo.c  cmake_install.cmake  config_based_brain.c  cow_ab_testing  cow_ab_testing.c  cow_inference_server  cow_inference_server.c  cow_snapshot_learning  cow_snapshot_learning.c  distributed_cow_demo  distributed_cow_demo.c  ethics_demo  ethics_demo.c  event_demo  event_demo.c  fractal_network_demo  fractal_network_demo.c  full_system_integration_test.c  full_system_integration_test.c.disabled  gpu_integration_test  gpu_integration_test.c  graph_metrics_demo.c  infant_demo  infant_learning_demo.c  integrated_demo  integrated_learning_demo.c  izhikevich_demo  izhikevich_demo.c  mesh_bootstrap_demo.c  middleware_demo.c  (+50 more)
examples/policies/: security_policy.nspl
examples/python/: quantum_walk_demo.py
examples/web_demo/: MULTITENANT_STATUS.md  README.md  START_REACT_APP.md  app.py  app.py.backup  app_multitenant_template.txt  apply_multitenant.py  tenant_manager.py  training_datasets.py
pybind/: Cargo.toml  pyproject.toml
pybind/src/: lib.rs
rust-tests/: Cargo.toml
rust-tests/src/: lib.rs
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/api/: nimcp.c  nimcp_api_brain.c  nimcp_api_cognitive.c  nimcp_api_inference.c  nimcp_api_network.c  nimcp_api_oscillation.c  nimcp_api_training.c  nimcp_brain_api.c  nimcp_cognitive_api.c  nimcp_oscillation_api.c  nimcp_part_accessors.c  nimcp_part_alloc_stats.c  nimcp_part_bindings.c  nimcp_part_core.c  nimcp_part_helpers.c  nimcp_part_io.c  nimcp_part_lifecycle.c  nimcp_part_processing.c  nimcp_part_stats.c  nimcp_refactored.c  nimcp_snapshot_api.c  nimcp_subsystems_api.c
src/async/: nimcp_bio_async.c  nimcp_bio_async_fep_bridge.c  nimcp_bio_async_orchestrator.c  nimcp_bio_router.c  nimcp_bio_router_fep_bridge.c  nimcp_bio_router_internal.h  nimcp_bio_router_part_accessors.c  nimcp_bio_router_part_core.c  nimcp_bio_router_part_helpers.c  nimcp_bio_router_part_lifecycle.c  nimcp_bio_router_part_processing.c  nimcp_bio_router_part_stats.c  nimcp_biological_timescales_fep_bridge.c  nimcp_future.c  nimcp_predictive_protocol.c  nimcp_predictive_protocol_fep_bridge.c  nimcp_protocol_metrics.c  nimcp_semantic_compression.c  nimcp_semantic_compression_fep_bridge.c  nimcp_wiring_diagram.c
src/bindings/: README.md  REFERENCE_IMPLEMENTATIONS.md
src/cognitive/: mental_health_monitor.c  nimcp_analogical_transfer.c  nimcp_cognitive_meta_controller.c  nimcp_contrastive_self.c  nimcp_dynamic_arch.c  nimcp_emotional_learning.c  nimcp_emotional_system_fep_bridge.c  nimcp_emotional_tagging.c  nimcp_fractal_cognitive.c  nimcp_hierarchical_fep_bridge.c  nimcp_meta_learning_fep_bridge.c  nimcp_multiscale_memory.c  nimcp_ood_detector.c  nimcp_output_attention.c  nimcp_personality_fep_bridge.c  nimcp_self_curriculum.c  (+5 more)
test/: CMakeLists.txt  DELIVERY_VERIFICATION.md  SKIPPED_TESTS.md  asan_suppressions.txt  benchmark_event_queue_pool.c  benchmark_feature_extractor_pool.cpp  benchmark_integration_buffer_creation.cpp  benchmark_pattern_cow.c  integration_utils_fault_tolerance_test_brain_recovery_integration  lsan.supp  routing_comparison_benchmark.cpp  run_asan_tests.sh  run_sim_tests.sh  test_framework.h  test_predictive_protocol_compile.c  test_signal_filter_bands.cpp  unit_api_test_api_brain_cow  unit_api_test_api_brain_lifecycle  unit_api_test_api_brain_operations  unit_api_test_api_brain_persistence  unit_api_test_api_brain_snapshots  unit_api_test_api_error_handling  unit_api_test_api_ethics  unit_api_test_api_global_workspace  unit_api_test_api_initialization  unit_api_test_api_knowledge  unit_api_test_api_network  unit_api_test_api_resizing  unit_api_test_api_version  unit_api_test_api_working_memory  unit_cognitive_analysis_test_network_analyzer_integration  unit_cognitive_bias_test_bias_detection  unit_cognitive_consolidation_test_consolidation  unit_cognitive_consolidation_test_systems_consolidation  unit_cognitive_curiosity_test_curiosity  unit_cognitive_curiosity_test_curiosity_comprehensive  unit_cognitive_emotional_tagging_test_emotional_tagging  unit_cognitive_emotional_tagging_test_emotional_tagging_real  unit_cognitive_epistemic_epistemic_filter_tests  unit_cognitive_ethics_test_ethics  (+197 more)
tests/: CMakeLists.txt
(+19225 files in other folders)
