[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "nimcp-v2"
version = "0.1.0a1"
description = "NIMCP V2 — Rust cognitive architecture (Python bindings)"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
module-name = "nimcp_v2"
features = ["pyo3/extension-module"]
