[package]
name = "nimcp-v2-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NIMCP V2 — cross-crate integration tests"
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nimcp-core = { workspace = true }
nimcp-eventlog = { workspace = true }
nimcp-scheduler = { workspace = true }
nimcp-adaptive = { workspace = true }
nimcp-checkpoint = { workspace = true }
nimcp-plasticity = { workspace = true }
nimcp-brain = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
