# Add subdirectories with specific order
add_subdirectory(lib)
add_subdirectory(lnn)
add_subdirectory(snn)
add_subdirectory(middleware)
add_subdirectory(portia)
add_subdirectory(python)
add_subdirectory(bindings/cpp)
add_subdirectory(bindings/java)
add_subdirectory(bindings/csharp)
add_subdirectory(bindings/rust)
# NOTE: Tests moved to /test directory (Code Surgeon integration)
# add_subdirectory(tests)
